--- a/src/app/instagrammeurs/instagrammeurs.component.css
+++ b/src/app/instagrammeurs/instagrammeurs.component.css
@@ -63,7 +63,7 @@
 }
 
 .custom-table a {
-    color: #007bff; /* Couleur du lien */
+    color: #c7206e; /* Couleur du lien */
     text-decoration: none; /* Retirer le soulignement par défaut des liens */
 }
 
@@ -77,6 +77,16 @@
     border-radius: 8px;
   }
   
+.upload_file
+{
+    background-image: url('./../../assets/pink_upload.png');
+    background-repeat: no-repeat;
+    background-size: 53px;
+    width: 100px;
+    height: 100px;
+
+    cursor: pointer;
+}
   .p-dialog .p-dialog-header {
     background-color: #f5f5f5;
     border-bottom: 1px solid #ddd;
@@ -195,7 +205,7 @@ button[pButton] {
 
 .p-inputgroup input {
   width: 10rem;
-  border-color: #5d5dfe;
+  border-color: #c7206e;
   }
 .p-inputgroup {
     display: flex;
@@ -226,3 +236,32 @@ button[pButton] {
 }
 
   
+
+
+::ng-deep .fushia{
+  background-color:  #c7206e ;
+  color: white;
+}
+
+.p-button {
+  background-color:  #c7206e ;
+  color: white;
+}
+
+
+::ng-deep a {
+  color: #c7206e    ;
+  text-decoration: underline;
+}
+.image_container
+{
+    width: 150px;
+    height: 150px;
+    border-radius: 10px;
+}
+.images_container
+{
+    display: flex;
+    flex-direction: column;
+    gap:20px;
+}
