--- a/src/app/manage-insta/manage-insta.component.html
+++ b/src/app/manage-insta/manage-insta.component.html
@@ -13,6 +13,9 @@
     <p-tabPanel header="Gestion Boutique">
         <app-gestion-boutique></app-gestion-boutique>
     </p-tabPanel>
+    <p-tabPanel header="Demandes echantillons">
+        <app-demande-echantillon></app-demande-echantillon>
+    </p-tabPanel>
 </p-tabView>
 
   
